Add tinting to pregame

--- a/S3/Stuff/Content/html/pregame.html
+++ b/S3/Stuff/Content/html/pregame.html
@@ -32,7 +32,7 @@
 		</div>
 		<img class="characterImageRight" id="imgRight" src = "img/pregame/characters/gingerbreadman.png">
 		<img class="characterImageLeft" id="imgLeft" src = "img/pregame/characters/redridinghood.png">
-		<img class="tournament" id="tournament" src="img/pregame/tournament.png">
+		<img class="tournament" id="tournament" src="img/pregame/notint/tournament.png">
 		<div class="round" id="round">aaaaaaa</div>
 	</body>
 </html>
